@@ -9,6 +9,7 @@ from mutagen.mp3 import MP3
 from mutagen.apev2 import APEv2File
 from mutagen.flac import FLAC
 from mutagen.wavpack import WavPack
+from mutagen.tta import TTA
 
 class TMetadata(TestCase):
     uses_mmap = False
@@ -94,6 +95,10 @@ class TFile(TestCase):
     def test_apev2(self):
         self.failUnless(isinstance(
             File(os.path.join("tests", "data", "click.mpc")), APEv2File))
+
+    def test_tta(self):
+        self.failUnless(isinstance(
+            File(os.path.join("tests", "data", "empty.tta")), TTA))
 
     def test_wavpack(self):
         self.failUnless(isinstance(
